--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "abhijeet",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
     "router": "^1.3.6"
   }
